# webview_rust

./: .gitignore  Cargo.toml  build.rs
.windows/winmd/: Microsoft.Web.WebView2.winmd
bindings/: Cargo.toml  build.rs
examples/: run_and_terminate.rs  sample.rs
src/: bridge.cpp  bridge.h  bridge.rs  builder.rs  callback.rs  lib.rs  webview.rs  webview2-rs.cpp
src/callback-derive/: Cargo.toml
src/callback-derive/src/: lib.rs
tests/: compare_browser_versions.rs  controller_bounds.rs  controller_close.rs  controller_get_webview.rs  controller_visible.rs  create_webview2_controller.rs  get_available_webview2_browser_version_string.rs  global_functions.rs  new_webview2_environment.rs  new_webview2_environment_with_options.rs  webview_execute_script.rs  webview_get_document_title.rs  webview_navigate.rs  webview_navigate_to_string.rs  webview_open_dev_tools_window.rs  webview_post_web_message.rs  webview_reload.rs  webview_script_to_execute_on_document_created.rs  webview_settings.rs  webview_stop.rs  webview_web_message_received.rs
tests/common/: mod.rs
