[package]
name = "webview_official"
version = "0.2.0"
authors = [
  "Lucas Fernandes Gonçalves Nogueira <lucas@tauri.studio>",
  "Daniel Thompson-Yvetot <denjell@sfosc.org>",
  "Tensor Programming <tensordeveloper@gmail.com>",
  "Serge Zaitsev <zaitsev.serge@gmail.com>"
]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tauri-apps/webview_rust"
description = "Official Webview-org Rust bindings, a tiny cross-platform library to render web-based GUIs for desktop applications"
keywords = [ "web", "gui", "desktop", "webkit" ]
categories = [ "gui", "api-bindings" ]
edition = "2018"

[lib]
name = "webview_official"
path = "src/lib.rs"

[[example]]
name = "sample"
path = "examples/sample.rs"

[dependencies]
bindings = { path = "bindings" }
cxx = "1.0.32"
futures = "0.3.13"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
windows = "0.6.0"

[build-dependencies]
cxx-build = "1.0.32"
